<resources>
    <string name="app_name">SurveyAdmin</string>

    <!-- login screen -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- home screen -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="bottom_menu_groups">Groups</string>
    <string name="bottom_menu_members">Members</string>
    <string name="bottom_menu_questionnaire">Questionnaire</string>

    <!-- bottom sheet group menu -->
    <string name="manage_members">Manage Members</string>
    <string name="update_group">Update Group</string>
    <string name="delete_group">Delete Group</string>

    <!-- manage group -->
    <string name="create_group_header">Add new group</string>
    <string name="group_name">Group name</string>
    <string name="group_description">Group description (Optional)</string>
    <string name="create_group">Create Group</string>
    <string name="update_group_header">Update group details</string>

</resources>
