<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- header -->
    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="@dimen/_10sdp"
        android:text="@string/create_group_header"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_13sdp" />

    <!-- group name -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:theme="@style/FieldsStyle"
        app:hintTextAppearance="@style/FloatingLabelStyle"
        app:passwordToggleEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_group_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/group_name"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:minLines="1"
            android:textSize="@dimen/_11sdp" />
    </android.support.design.widget.TextInputLayout>

    <!-- group description -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:theme="@style/FieldsStyle"
        app:hintTextAppearance="@style/FloatingLabelStyle"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_group_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/group_description"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:minLines="1"
            android:textSize="@dimen/_11sdp" />
    </android.support.design.widget.TextInputLayout>

    <!-- create my account -->
    <TextView
        android:id="@+id/tv_create_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/create_group"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_16sdp" />

</LinearLayout>